kubernetes/components/network-policies/allow-cnpg.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cnpg
spec:
  podSelector:
    matchLabels:
      cnpg.io/podRole: instance
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: cloudnative-pg
      podSelector:
        matchLabels:
          app.kubernetes.io/name: cloudnative-pg
    ports:
      - port: 8000
      - port: 5432
